--- a/index.html
+++ b/index.html
@@ -1,1 +1,232 @@
-AZ Vision
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="/dist/style.css">
+    <title>AZ Vision</title>
+</head>
+<body>
+    <header>
+        <div class="navigation">
+            <div class="logo">
+                <img src="./images/logo.png" alt="logo">
+            </div>
+            <div class="nav">
+                <span><a href="#">home</a></span>
+                <span><a href="#">work</a></span>
+                <span><a href="#">our services</a></span>
+                <span><a href="#">team</a></span>
+                <span><a href="#">career</a></span>
+                <span><a href="#">contact</a></span>
+                <img src="./images/search.png" alt="search">
+            </div>
+        </div>
+    </header>
+    <section class="banner">
+        <div class="texts">
+                <h1>we code</h1>
+                <h1>we deliver</h1>
+            <div class="paragraph">
+                <div class="play">
+                    <img src="./images/play-btn.png" alt="play-btn">
+                </div>
+                <p>Twiscode specializes in developing 
+                    high-performing mobile and 
+                    web applications.</p>
+            </div>
+        </div>
+        <div class="banner_play">
+            <img src="./images/banner-image.png" alt="banner">
+        </div>
+    </section>
+    <section class="work">
+        <div class="work_image">
+            <h1 class="detail">
+                <a href="#">View Detail</a>
+            </h1>
+            <img src="./images/detail-img.png" alt="work">
+        </div>
+        <div class="work_texts">
+            <h1>what we do ?</h1>
+            <ul>
+                <li>
+                <img src="./images/mobile-app.png" alt="mobile">
+                Mobile Application</li>
+                <li>Building mobile applications is never easy. </li>
+                <li>P2P lending app ? Logistic App ? E-Commerce App ? </li>
+                <li>We have done them all. Done them all well. </li>
+                <li>Done them all fast. </li>
+            </ul>
+            <ul>
+                <li>
+                <img src="./images/web-app.png" alt="web app">
+                Web Application</li>
+                <li>Building mobile applications is never easy. </li>
+                <li>P2P lending app ? Logistic App ? E-Commerce App ? </li>
+                <li>We have done them all. Done them all well. </li>
+                <li>Done them all fast. </li>
+            </ul>
+            <ul>
+                <li>
+                <img src="./images/ux-ui.png" alt="ux">
+                UI/UX Design</li>
+                <li>All things are designed. A few things are designed well. </li>
+                <li>We try to elevate your ideas with great UI/UX design, </li>
+                <li>suited to your taste, addressing the right pain points.</li>
+            </ul>
+        </div>
+    </section>
+    <section class="project">
+        <img src="./images/work-how.png" alt="how-work">
+        <div class="cart">
+            <h1>How We Work?</h1>
+            <p>Let's discuss what projects you have in mind</p>
+            <button class="btn">let's have a coffee</button>
+        </div>
+    </section>
+    <section class="customer">
+        <h1>Our Customers <br>
+            are our biggest fans
+        </h1>
+        <div class="brands">
+            <img src="./images/logos/cbn.png" alt="">
+            <img src="./images/logos/ciputra.png" alt="">
+            <img src="./images/logos/hubble.png" alt="">
+            <img src="./images/logos/image 1.png" alt="">
+            <img src="./images/logos/image 2.png" alt="">
+            <img src="./images/logos/image 3.png" alt="">
+            <img src="./images/logos/image 4.png" alt="">
+            <img src="./images/logos/image 5.png" alt="">
+            <img src="./images/logos/image 6.png" alt="">
+            <img src="./images/logos/income.png" alt="">
+            <img src="./images/logos/jawa pos.png" alt="">
+            <img src="./images/logos/unair.png" alt="">
+            <img src="./images/logos/lazada.png" alt="">
+        </div>
+        <a href="#">see more</a>
+    </section>
+    <section class="team">
+        <h1>Our Team</h1>
+        <div class="slider">
+            <div class="slide">
+            <img src="./images/team/image 11.png" alt="slider">
+            <div class="title">
+                <h1>Elisabeth Be</h1>
+                <h3>coo</h3>
+            </div>
+        </div>
+            <div class="slide">
+            <img src="./images/team/image 10.png" alt="slider">
+            <div class="title">
+                <h1>Andree Wijaya</h1>
+                <h3>cfo</h3>
+            </div>
+        </div>
+            <div class="slide">
+            <img src="./images/team/image 12.png" alt="slider">
+            <div class="title">
+                <h1>Sanjaya Wahono</h1>
+                <h3>CEO/CTO</h3>
+            </div>
+        </div>
+        <div class="slide">
+            <img src="./images/team/image 11.png" alt="slider">
+            <div class="title">
+                <h1>Elisabeth Be</h1>
+                <h3>coo</h3>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section class="join-team">
+        <div class="left">
+            <h1>Join Our Team</h1>
+            <img src="./images/team/join-team.png" alt="joinUS">
+        </div>
+        <div class="right">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et at fringilla id maecenas in 
+                scelerisque in. Pharetra, erat amet, vestibulum ullamcorper. 
+                Nunc feugiat lacus et eget urna ornare risus malesuada. Cursus morbi 
+                vel sed ipsum eget tincidunt ultrices.
+            </p>
+            <button class="btn">apply</button>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="location">
+            <h1>Location</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.743622305306!2d112.7444950140551!3d-7.269988673451486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbd85e721437%3A0x9b05186e08aea1f1!2sJl.%20Kayoon%2C%20Embong%20Kaliasin%2C%20Kec.%20Genteng%2C%20Kota%20SBY%2C%20Jawa%20Timur!5e0!3m2!1sid!2sid!4v1652513703619!5m2!1sid!2sid" 
+            width="500" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="foot-items">
+            <h1>Company</h1>
+            <ul>
+                <li>- Work</li>
+                <li>- Service</li>
+                <li>- Team</li>
+                <li>- Contact</li>
+            </ul>
+        </div>
+        <div class="foot-items">
+            <h1>Contact</h1>
+            <ul>
+                <li>
+                    <i class="fa-brands fa-twitter"></i>
+                     Twiscode</li>
+                <li>
+                    <i class="fa-brands fa-facebook-f"></i>  
+                    Twiscode</li>
+                <li>
+                    <i class="fa-regular fa-envelope"></i>
+                    andree@twiscode.com</li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <p>Twiscode Pte. Ltd. | PT. Dapur Rumah Sejahtera</p>
+    </footer>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script type="text/javascript">     
+        $('.slider').slick({
+            dots: true,
+            infinite: true,
+            speed: 300,
+            slidesToShow: 3,
+            slidesToScroll: 2,
+            responsive: [
+              {
+                breakpoint: 1024,
+                settings: {
+                  slidesToShow: 2,
+                  slidesToScroll: 1,
+                  infinite: true,
+                  dots: true
+                }
+              },
+              {
+                breakpoint: 600,
+                settings: {
+                  slidesToShow: 2,
+                  slidesToScroll: 2
+                }
+              },
+              {
+                breakpoint: 480,
+                settings: {
+                  slidesToShow: 1,
+                  slidesToScroll: 1
+                }
+              }
+            ]
+        });
+    </script>
+</body>
+</html>
